--- a/templates/page.html
+++ b/templates/page.html
@@ -66,7 +66,7 @@
 		<main>
 			<h2>{{ page.title }}</h2>
 			{% if page.date %}
-				Posted: <time>{{ page.date }}</time>
+				<i>Posted: <time>{{ page.date }}</time></i>
 			{% else %}
 			{% endif %}
       		{{ page.content | safe }}
