--- a/templates/404.html
+++ b/templates/404.html
@@ -10,7 +10,7 @@ permalink: /404.html
 		<meta http-equiv="X-XSS-Protection" content="1; mode=block; report=https://cartographer.michaelbh.com/impassable">
 		<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content; default-src https://michaelbh.com; script-src 'sha256-TRf82RwIYNrDsOp2S67qawaic76Po8TG0HU2eZwHw/0=' https://michaelbh.com https://cartographer.michaelbh.com/js/ https://cdn.jsdelivr.net/gh/michardy/; connect-src wss://cartographer.michaelbh.com; style-src https://michaelbh.com https://cdn.jsdelivr.net/gh/michardy/; frame-src https://michaelbh.com https://cartographer.michaelbh.com; img-src https://michaelbh.com https://mhardy.dev;">
 		<meta id="meta" name="viewport" content="width=device-width; initial-scale=1.0" />
-		<link rel="stylesheet" href="css/branding.css"/>
+		<link rel="stylesheet" href="/css/branding.css"/>
 		<link rel="stylesheet" href="//cdn.jsdelivr.net/gh/michardy/grid-ui@6/css/grid_window.min.css">
 		<link rel="stylesheet" href="//cdn.jsdelivr.net/gh/michardy/grid-ui@6/css/basic.min.css">
 		<!--Please wait while I sacrafice a newborn goat to IE/Edge. (Edit: It still does not work)-->
