--- a/templates/page.html
+++ b/templates/page.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8"/>
 		<meta http-equiv="X-Frame-Options" content="deny">
 		<meta http-equiv="X-XSS-Protection" content="1; mode=block; report=https://cartographer.michaelbh.com/impassable">
-		<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content; default-src https://michaelbh.com; script-src https://cartographer.michaelbh.com/js/ https://cdn.jsdelivr.net/gh/michardy/; connect-src wss://cartographer.michaelbh.com https://cartographer.michaelbh.com/terrraform/annotations/; style-src https://michaelbh.com https://cdn.jsdelivr.net/gh/michardy/ https://cartographer.michaelbh.com/terrraform/css/; frame-src https://cartographer.michaelbh.com; img-src https://michaelbh.com https://mhardy.dev;">
+		<meta http-equiv="Content-Security-Policy" content="block-all-mixed-content; default-src https://michaelbh.com; script-src https://cartographer.michaelbh.com/js/ https://cdn.jsdelivr.net/gh/michardy/; connect-src wss://cartographer.michaelbh.com https://cartographer.michaelbh.com/terraform/annotations/; style-src 'unsafe-inline' https://michaelbh.com https://cdn.jsdelivr.net/gh/michardy/ https://cartographer.michaelbh.com/terraform/css/; frame-src https://cartographer.michaelbh.com; img-src https://michaelbh.com https://mhardy.dev;">
 		<meta id="meta" name="viewport" content="width=device-width, initial-scale=1.0"/>
 		<!--Fixes a wierd bug in the chrome dev tools-->
 		<meta name="viewport" content="width=device-width"/>
